# binance-rs

./: .gitignore  Cargo.toml  README.md  example_config.toml  rustfmt.toml
examples/src/: main.rs
src/: errors.rs  lib.rs  model.rs
src/api/: account.rs  general.rs  market.rs  mod.rs  userstream.rs  util.rs  websockets.rs
src/api/client/: mod.rs
tests/: general_api.rs  market_api.rs
